--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>This page has no data.</h1>
-  <p>The ordered list will be populated by JavaScript.</p>
+  <p>Here's a list of stuff that will be populated by JavaScript.</p>
   <ol></ol>
   <script src="./app.js"></script>
 </body>
